--- a/index.html
+++ b/index.html
@@ -12,30 +12,30 @@
             <div>
                 <img src="./images/icon-sedans.svg" alt="">
             </div>
-            <h2>SEDANS</h2>
-            <p>Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city or on your next road trip.</p>
+            <h1 class="lato-bold">SEDANS</h1>
+            <p class="lex-deca">Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city or on your next road trip.</p>
             <div>
-                <a href="">Learn More</a>
+                <a class="lex-deca"  href="">Learn More</a>
             </div>
         </div>
         <div class="card__suvs">
             <div>
                 <img src="./images/icon-suvs.svg" alt="">
             </div>
-            <h2>SUVs</h2>
-            <p>Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city or on your next road trip.</p>
+            <h1 class="lato-bold">SUVs</h1>
+            <p class="lex-deca">Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation and off-road adventures.</p>
             <div>
-                <a href="">Learn More</a>
+                <a class="lex-deca" href="">Learn More</a>
             </div>
         </div>
         <div class="card__luxury">
             <div>
                 <img src="./images/icon-luxury.svg" alt="">
             </div>
-            <h2>Luxury</h2>
-            <p>Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city or on your next road trip.</p>
+            <h1 class="lato-bold">Luxury</h1>
+            <p class="lex-deca">Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury rental and arrive in style.</p>
             <div>
-                <a href="">Learn More</a>
+                <a class="lex-deca"  href="">Learn More</a>
             </div>
         </div>
     </div>
